--- a/server/common/swagger/Api.yaml
+++ b/server/common/swagger/Api.yaml
@@ -67,6 +67,25 @@ paths:
         404:
           description: Example not found
 
+  /wapp/{uri}:
+    get:
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Wapplalyzer
+      parameters:
+        - name: uri
+          required: true
+          in: path
+          type: string
+      responses:
+        200:
+          description: Return the example with the specified id
+        404:
+          description: Website not found
+
   /spec:
     get:
       tags:
